<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/dp_5"
    android:layout_marginTop="@dimen/dp_5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_sp_10">

        <ImageView
            android:id="@+id/s_Image"
            android:contentDescription="@string/app_name"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person"
            android:background="@drawable/transparent_edittext"/>
        <TextView
            android:id="@+id/s_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginStart="@dimen/_sp_10"
            app:layout_constraintStart_toEndOf="@id/s_Image"
            android:text="@string/s_item_name"/>
        <TextView
            android:id="@+id/s_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/sp6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="@id/s_name"
            app:layout_constraintTop_toBottomOf="@id/s_name"
            android:text="@string/s_tsh_5000"/>
        <TextView
            android:id="@+id/s_desc"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_marginEnd="@dimen/sp20"
            android:layout_marginTop="@dimen/sp6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toEndOf="@id/s_Image"
            app:layout_constraintStart_toStartOf="@id/s_name"
            app:layout_constraintTop_toBottomOf="@id/s_price"
            android:text="@string/default_descritpion"/>

        <ImageView
            android:id="@+id/s_add"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus"
            android:padding="3dp"
            android:background="@color/primaryLightColor"
            app:layout_constraintTop_toBottomOf="@id/s_name"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/s_minus"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trash_can_outline"
            android:padding="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/primaryLightColor"
            app:layout_constraintTop_toBottomOf="@id/s_add"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>